convert `WinSize` to Kotlin